@@ -2,6 +2,9 @@
 use strict;
 use warnings;
 
+use File::Copy qw(move);
+
+use Test::BrewBuild;
 use Test::BrewBuild::Dispatch;
 use Test::BrewBuild::Tester;
 use Test::More;
@@ -10,6 +13,10 @@ if (! $ENV{BBDEV_TESTING}){
     plan skip_all => "developer tests only";
     exit;
 }
+
+my $workdir = Test::BrewBuild->workdir;
+move "$workdir/brewbuild.conf", "$workdir/brewbuild.conf.temp" or die $!;
+is -f "$workdir/brewbuild.conf", undef, "conf file moved ok";
 
 my $d = Test::BrewBuild::Dispatch->new;
 my $t = Test::BrewBuild::Tester->new;
@@ -27,5 +34,8 @@ like
     "bbdispatch is clear on what to do if no testers found";
 
 $t->stop;
+
+move "$workdir/brewbuild.conf.temp", "$workdir/brewbuild.conf" or die $!;
+is -f "$workdir/brewbuild.conf", 1, "conf replaced moved ok";
 
 done_testing();
